# community-chat-intel

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analyze.py  build_final_report.py  cross_stream_synthesis.py  crosstabs.py  keywords.py  languages.py  plan.md  post_analysis.py  pyproject.toml  pyrightconfig.json  report-template.md  requirements.txt  ruff.toml  stream_b_embed_retrieve.py  stream_c_fact_extract.py  stream_c_retry.py  stream_d_v4.py  topics.py
.github/workflows/: ci.yml  publish.yml
docs/: DASHBOARD.md  PIPELINE.md
examples/: quickstart.ipynb  sample-export.json
src/chatintel/: __init__.py
src/chatintel/core/: analyze.py  crosstabs.py  languages.py
src/chatintel/streams/: build_final_report.py  cross_stream_synthesis.py  deterministic_analytics.py  fact_extraction.py  fact_extraction_retry.py  narrative_synthesis.py  post_analysis.py  semantic_retrieval.py  stream_b_embed_retrieve.py  stream_c_fact_extract.py  stream_c_retry.py  topics.py
src/chatintel/templates/: report-template.md
src/parallax/: __init__.py
src/parallax/config/: README.md  brand_patterns.yaml  canonical_schema.json  categories.yaml  fact_schema.yaml  queries.yaml  url_domains.yaml
src/parallax/config/templates/: ai-product.yaml  gaming-community.yaml  programming-language.yaml
src/parallax/core/: __init__.py  adapters.py  analyze.py  config.py  crosstabs.py  diff.py  init.py  keywords.py  languages.py  pipeline.py  state.py
src/parallax/streams/: __init__.py  build_final_report.py  deterministic_analytics.py  fact_extraction.py  generate_dashboard.py  llm_cli.py  narrative_synthesis.py  post_analysis.py  semantic_retrieval.py  topics.py
src/parallax/templates/: report-template.md
tests/: README.md  test_adapters.py  test_analyze.py  test_config.py  test_crosstabs.py  test_csv_format.py  test_incremental.py  test_init.py  test_integration.py  test_keywords.py  test_languages.py
