[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatintel"
version = "0.2.0"
description = "Privacy-preserving toolkit for turning raw chat exports into structured community-intelligence reports."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
chatintel-analyze = "chatintel.core.analyze:main"
chatintel-topics = "chatintel.streams.topics:main"
chatintel-crosstabs = "chatintel.core.crosstabs:main"
# stream_b/c/c-retry/d, cross_stream_synthesis, build_final_report, and
# post_analysis are one-shot scripts (module-level code, no main()) — run
# them with `python -m chatintel.streams.<name>` instead of a console
# script; see README.md's Quick start / docs/PIPELINE.md for exact invocations.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chatintel = ["templates/*.md"]
