[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax"
version = "0.4.0"
description = "Multi-stream analysis toolkit for turning raw chat exports into structured community-intelligence reports."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "basedpyright>=1.20.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
parallax-analyze = "parallax.core.analyze:main"
parallax-topics = "parallax.streams.topics:main"
parallax-crosstabs = "parallax.core.crosstabs:main"
# semantic_retrieval, fact_extraction, deterministic_analytics,
# narrative_synthesis, build_final_report, and post_analysis are one-shot scripts
# (module-level code, no main()) — run them with `python -m parallax.streams.<name>`
# instead of a console script; see README.md's Quick start / docs/PIPELINE.md for
# exact invocations.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parallax = ["templates/*.md", "config/*.yaml", "config/*.md"]
