[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax"
version = "1.0.0"
description = "Multi-stream analysis toolkit for turning raw chat exports into structured community-intelligence reports."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Luna Xin", email = "luna.xin@outlook.com" },
]
keywords = [
    "chat-analysis",
    "community-intelligence",
    "discord",
    "telegram",
    "slack",
    "analytics",
    "nlp",
    "sentiment",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "basedpyright>=1.20.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/lunalunaa/parallax"
Documentation = "https://github.com/lunalunaa/parallax#readme"
Repository = "https://github.com/lunalunaa/parallax"
Issues = "https://github.com/lunalunaa/parallax/issues"
Changelog = "https://github.com/lunalunaa/parallax/blob/main/CHANGELOG.md"

[project.scripts]
parallax-analyze = "parallax.core.analyze:main"
parallax-topics = "parallax.streams.topics:main"
parallax-crosstabs = "parallax.core.crosstabs:main"
parallax-diff = "parallax.core.diff:main"
parallax-init = "parallax.core.init:main"
# semantic_retrieval, fact_extraction, deterministic_analytics,
# narrative_synthesis, build_final_report, and post_analysis are one-shot scripts
# (module-level code, no main()) — run them with `python -m parallax.streams.<name>`
# instead of a console script; see README.md's Quick start / docs/PIPELINE.md for
# exact invocations.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parallax = ["templates/*.md", "config/*.yaml", "config/*.md", "config/*.json"]
